@@ -1,76 +1,151 @@
-A/Swine/Binh_Duong/03_08/2010	6
-A/Swine/Binh_Duong/03_10/2010	6
-A/Swine/HK/2503/2011	7
-A/Swine/HK_NS2439/2011	7
-A/Swine/GX_NS2783/2010	7
-A/Swine/GD/3767/2011	7
-A/Swine/GX/2242/2011	7
-A/Swine/GX/2803/2011	7
-A/Swine/GX_NS3106/2011	7
-A/Swine/GX_NS3108/2011	7
-A/Swine/HK_NS2810/2011	7
-A/Swine/HK/2857/2011	7
-A/Swine/HK/3238/2011	7
-A/Swine/HK/3700/2011	7
-A/Swine/HK/168/2012	7
-A/Swine/HK/459/2012	7
-A/Swine/HK/1071/2012	7
-A/Swine/HK/1284/2012	7
-A/Swine/GX/650/2012	7
-A/Swine/GX_NS1409/2012	8
-A/Swine/GD/1599/2012	6
-A/Swine/HK/2454/2012	7
-A/Swine/GX/508/2012	7
-A/Swine/HK_NS1651/2012	7
-A/Swine/HK_NS2733/2012	7
-A/Swine/HK/3280/2012	7
-A/Swine/GX_NS2394/2012	7
-A/Swine/GD_NS2701/2012	8
-A/Swine/GD_NS2892/2012	8
-A/Swine/GD/2919/2012	6
-A/Swine/HK_NS2698/2012	8
-A/Ho_Chi_Minh/459.6/2010	7
-A/Netherlands/42/2006	10
-A/Malaysia/29890/2004	11
-A/New_York/334/2004	11
-A/New_York/463/2005	11
-A/New_York/238/2005	11
-A/HaNoi/BM544/2004	10
-A/Hong_Kong/HKU39/2004	11
-A/Malaysia/29997/2004	10
-A/Western_Australia/38/2003	10
-A/Moscow/328/2003	11
-A/Hanoi/BM767/2003	12
-A/California/UR06-0589/2007	11
-A/Brisbane/09/2006	11
-A/Tokyo/Ut-Sk-1/2007	9
-A/South_Carolina/NHRC0001/2006	11
-A/Mexico/InDRE2160/2005	11
-A/Colorado/UR06-0023/2007	11
-A/Hong_Kong/NHRC0001/2005	11
-A/California/NHRC0001/2005	11
-A/Mexico/InDRE29/2006	11
-A/California/VRDL165/2009	10
-A/California/UR07-0017/2008	11
-A/Ohio/UR07-0105/2008	10
-A/Kyrgyzstan/WRAIR1255P/2008	11
-A/Thailand/CU370/2008	11
-A/Moscow/RII05/2012	11
-A/Hokkaido/30-1-a/2013	12
-A/Czech_Republic/119/2012	11
-A/Petrozavodsk/RII01/2012	11
-A/New_York/20342/2010	11
-A/Boston/DOA52/2011	11
-A/Czech_Republic/126/2012	11
-A/Singapore/H2010.559C/2010	11
-A/Auckland/615/2002	10
-A/New_York/657/1994	9
-A/Malaysia/12990/1999	11
-A/HaNoi/1766/2001	11
-A/Malaysia/10816/1999	11
-A/Netherlands/126/2001	11
-A/New_York/435/2000	11
-A/New_York/452/1999	10
-A/New_York/523/1998	10
-A/New_York/582/1996	9
-A/New_York/603/1996	9
+A/Swine/Binh_Duong/03_08/2010	5
+A/Swine/Binh_Duong/03_10/2010	5
+A/Swine/HK/2503/2011	6
+A/Swine/HK_NS2439/2011	6
+A/Swine/GX_NS2783/2010	6
+A/Swine/GD/3767/2011	6
+A/Swine/GX/2242/2011	6
+A/Swine/GX/2803/2011	6
+A/Swine/GX_NS3106/2011	6
+A/Swine/GX_NS3108/2011	6
+A/Swine/HK_NS2810/2011	6
+A/Swine/HK/2857/2011	6
+A/Swine/HK/3238/2011	6
+A/Swine/HK/3700/2011	6
+A/Swine/HK/168/2012	6
+A/Swine/HK/459/2012	6
+A/Swine/HK/1071/2012	6
+A/Swine/HK/1284/2012	6
+A/Swine/GX/650/2012	6
+A/Swine/GX_NS1409/2012	6
+A/Swine/GD/1599/2012	5
+A/Swine/HK/2454/2012	6
+A/Swine/GX/508/2012	6
+A/Swine/HK_NS1651/2012	6
+A/Swine/HK_NS2733/2012	6
+A/Swine/HK/3280/2012	6
+A/Swine/GX_NS2394/2012	6
+A/Swine/GD_NS2701/2012	6
+A/Swine/GD_NS2892/2012	6
+A/Swine/GD/2919/2012	5
+A/Swine/HK_NS2698/2012	6
+A/Ho_Chi_Minh/459.6/2010	6
+A/Netherlands/42/2006	8
+A/Malaysia/29890/2004	9
+A/New_York/334/2004	9
+A/New_York/463/2005	9
+A/New_York/238/2005	9
+A/HaNoi/BM544/2004	8
+A/Hong_Kong/HKU39/2004	9
+A/Malaysia/29997/2004	8
+A/Western_Australia/38/2003	8
+A/Moscow/328/2003	9
+A/Hanoi/BM767/2003	9
+A/California/UR06-0589/2007	9
+A/Brisbane/09/2006	9
+A/Tokyo/Ut-Sk-1/2007	7
+A/South_Carolina/NHRC0001/2006	9
+A/Mexico/InDRE2160/2005	9
+A/Colorado/UR06-0023/2007	9
+A/Hong_Kong/NHRC0001/2005	9
+A/California/NHRC0001/2005	9
+A/Mexico/InDRE29/2006	9
+A/California/VRDL165/2009	8
+A/California/UR07-0017/2008	9
+A/Ohio/UR07-0105/2008	8
+A/Kyrgyzstan/WRAIR1255P/2008	9
+A/Thailand/CU370/2008	9
+A/Moscow/RII05/2012	8
+A/Hokkaido/30-1-a/2013	8
+A/Czech_Republic/119/2012	8
+A/Petrozavodsk/RII01/2012	8
+A/New_York/20342/2010	9
+A/Boston/DOA52/2011	9
+A/Czech_Republic/126/2012	9
+A/Singapore/H2010.559C/2010	9
+A/Auckland/615/2002	8
+A/New_York/657/1994	7
+A/Malaysia/12990/1999	9
+A/HaNoi/1766/2001	9
+A/Malaysia/10816/1999	9
+A/Netherlands/126/2001	10
+A/New_York/435/2000	9
+A/New_York/452/1999	8
+A/New_York/523/1998	9
+A/New_York/582/1996	8
+A/New_York/603/1996	8
+77	8
+78	8
+79	8
+80	8
+81	8
+82	8
+83	9
+84	9
+85	9
+86	9
+87	9
+88	9
+89	9
+90	9
+91	9
+92	9
+93	9
+94	9
+95	9
+96	9
+97	9
+98	9
+99	9
+100	9
+101	9
+102	9
+103	9
+104	9
+105	9
+106	9
+107	9
+108	9
+109	9
+110	9
+111	9
+112	9
+113	9
+114	8
+115	8
+116	8
+117	9
+118	6
+119	5
+120	6
+121	6
+122	6
+123	6
+124	6
+125	6
+126	6
+127	6
+128	6
+129	6
+130	6
+131	6
+132	6
+133	6
+134	6
+135	6
+136	6
+137	6
+138	6
+139	6
+140	6
+141	6
+142	6
+143	6
+144	6
+145	6
+146	6
+147	6
+148	6
+149	9
+150	9
+151	8
